# CLB

./: .gitignore  Justfile  NOTES.md  PLAN.md  README.md  cli.py  explore.ipynb  main.py  pyproject.toml
.github/workflows/: Website.yml
chem-editor/: README.md
chem-editor/3.21-beta/: README.txt  editorV3 - no numpy.py  editorV3.py
website/: .env.example  README.md  compose.yml  package-lock.json  package.json
website/app/: app.css  auth.server.ts  consts.ts  root.tsx  routes.ts
website/app/components/: Field.tsx  Nav.tsx  PlayerIcon.tsx  PlayerInfo.tsx  TeamPlayerList.tsx
website/app/routes/: account.tsx  admin.tsx  auth-callback.ts  chemistry.tsx  drafting.tsx  edit-team.tsx  home.tsx  kitchen-sink.tsx  login.tsx  logout.tsx  matches.tsx  player.tsx  players.tsx  team.tsx  teams.tsx  trading.tsx
website/database/: schema.ts
website/drizzle/: 0000_redundant_praxagora.sql  0000_wild_network.sql
website/drizzle/meta/: 0000_snapshot.json  _journal.json
