[project]
name = "wrenchball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "typer>=0.17.3",
]
